--- a/public/assets/css/new.css
+++ b/public/assets/css/new.css
@@ -367,6 +367,76 @@ body {
     object-fit: contain;
 }
 
+.carrusel-flecha {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 2;
+    font-size: 14px;
+    transition: background-color 0.3s;
+}
+
+
+.carrusel-flecha:hover {
+    background-color: rgba(13, 37, 6, 0.8);
+}
+
+.carrusel-flecha.izquierda {
+    left: 5px;
+}
+
+.carrusel-flecha.derecha {
+    right: 5px;
+}
+
+.contador-imagenes {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 2px 8px;
+    border-radius: 10px;
+    font-size: 12px;
+    z-index: 2;
+}
+
+.modal-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 50px;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    font-size: 24px;
+    cursor: pointer;
+    transition: all 0.3s;
+    display: none; /* Oculto por defecto */
+    z-index: 2001;
+}
+
+.modal-arrow:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.left-arrow {
+    left: 30px;
+}
+
+.right-arrow {
+    right: 30px;
+}
+
 #caption {
     margin: auto;
     display: block;
